# EphemeralML

./: .gitignore  CHANGELOG.md  CNAME  Cargo.toml  Dockerfile.prod  INFRA.md  QA_REPORT.md  QUICKSTART.md  README.md  SECURITY_DEMO.md  TASK_1_1_SUMMARY.md  build.py  demo.sh  index.html  security_audit_report.txt  validate_structure.py
.cargo/: config.toml
.kiro/specs/ephemeral-inference/: design.md  requirements.md  tasks.md
AGENTS/: confidential_ai_expert.md
client/: Cargo.toml
client/src/: attestation_verifier.rs  decomposer.rs  error.rs  freshness.rs  lib.rs  main.rs  mock.rs  model_validation.rs  policy.rs  secure_client.rs  types.rs
common/: Cargo.toml
common/src/: audit.rs  error.rs  hpke_session.rs  kms_proxy.rs  lib.rs  model_manifest.rs  protocol.rs  receipt_signing.rs  storage_protocol.rs  types.rs  validation.rs  vsock.rs
confidential-inference-gateway/: design.md  requirements.md  tasks.md
docs/: BENCHMARK_SPEC.md  STATUS_SUMMARY.md  benchmarks.md  design.md  github_deployments.md  metrics_summary.md  requirements.md  security_audit_2025-01-31.md  tasks.md
docs/aws-reference/: cryptography-on-aws-how-to-choose.txt  encryption-sdk-developer-guide.txt  kms-dg.txt  signer-dg.txt
docs/design/: inter-enclave-trust.md
docs/investors/: aws-nitro-enclaves-user-guide.txt
docs/papers_llm/: 01_nvidia_hopper_cGPU_benchmark.md  02_confidential_llm_cpu_gpu_tees.md  03_attestable_audits_nitro.md  04_anthropic_confidential_inference.md  05_inter_cvm_communication.md  06_confidential_prompting.md  07_tee_sgx_sev_tdx_benchmark.md  08_arm_cca_on_device.md  09_intel_confidential_ai_whitepaper.md  10_sev_snp_tdx_sigmetrics.md  11_sgxv2_ml_damon2022.md
enclave/: Cargo.toml  Dockerfile.enclave
enclave/src/: assembly.rs  attestation.rs  audit.rs  candle_engine.rs  error.rs  inference.rs  inference_handler.rs  kms_client.rs  kms_proxy_client.rs  lib.rs  main.rs  mock.rs  model_loader.rs  receipt.rs  server.rs  session_manager.rs
enclave/tests/: candle_inference_test.rs  quantized_inference_test.rs
enclaves/busybox-smoke/: Dockerfile  init.sh
enclaves/vsock-pingpong/: Cargo.toml  Dockerfile  init.sh  vsock_client.py
enclaves/vsock-pingpong/src/: main.rs
host/: Cargo.toml
host/src/: aws_proxy.rs  circuit_breaker.rs  error.rs  kms_proxy_server.rs  lib.rs  limits.rs  main.rs  metrics.rs  mock.rs  otel.rs  proxy.rs  rate_limit.rs  retry.rs  spy.rs  storage.rs
host/tests/: degradation_tests.rs  spy_test.rs
infra/: main.tf  setup_host.sh  variables.tf
infra/hello-enclave/: .terraform.lock.hcl  DIAG10_RUNBOOK.md  HANDOFF.md  HELLO_ENCLAVE_RUNBOOK.md  KMS_DEBUG_NOTES_2026-01-27.md  VSOCK_PINGPONG_RUNBOOK.md  main.tf  otelcol-logging.yaml  run_a2_vsock_pingpong.sh  run_diag10_cycle.sh  run_diag10_smart_cycle.sh  ssm_benchmark.sh  ssm_diag10.sh  user_data_al2.sh  user_data_al2023.sh
infra/modules/enclave_host/: main.tf
investor/: INVESTOR_BRIEF.md  ONE_PAGER.md  PITCH_DECK_OUTLINE.md
scripts/: benchmark_report.py  encrypt_model.py  prepare_bench_model.py  prepare_benchmark_model.sh  prepare_minilm.py  prepare_real_model.py  prepare_test_model.py  run_benchmark.sh  vsock_bench.py
test_artifacts/: manifest.json  model.safetensors  test-model-001.enc
tests/: integration_test.rs
