[workspace]
members = [
    "common",
    "client",
    "host", 
    "enclave"
]
resolver = "2"

[workspace.dependencies]
# Core ML framework dependencies (will be added back when implementing ML functionality)
# candle-core = "0.4"
# candle-onnx = "0.4"  # Will be added back when implementing ONNX parsing

# Serialization and async runtime
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# AWS Nitro Enclaves (only for real enclave builds)
aws-nitro-enclaves-nsm-api = "0.4"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"

# Testing
proptest = "1.0"