[workspace]
members = [
    "common",
    "client",
    "host", 
    "enclave"
]
resolver = "2"

[workspace.dependencies]
# Core ML framework dependencies
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
safetensors = "0.7"
tokenizers = "0.21"

# Serialization and async runtime
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# VSock communication
tokio-vsock = "0.4"

# AWS Nitro Enclaves (only for real enclave builds)
aws-nitro-enclaves-nsm-api = "0.4"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"

# Cryptographic dependencies
hpke = "0.11"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
x25519-dalek = "2.0"
chacha20poly1305 = "0.11.0-rc.2"
rand = "0.8"
zeroize = { version = "1.7", features = ["zeroize_derive"] }

# CBOR serialization
serde_cbor = "0.11"

# Testing
proptest = "1.0"