[package]
name = "ephemeral-ml-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies (ML dependencies will be added back when implementing ML functionality)
# candle-core = { workspace = true }
# candle-onnx = { workspace = true }  # Will be added back when implementing ONNX parsing
ephemeral-ml-common = { path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }

# Client-specific dependencies
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
proptest = { workspace = true }

[features]
default = ["mock"]
mock = []
production = []