[package]
name = "ephemeral-ml-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
candle-core = { workspace = true }
safetensors = { workspace = true }
ephemeral-ml-common = { path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }

# Client-specific dependencies
reqwest = { version = "0.11", features = ["json"] }
hex = "0.4"

[dev-dependencies]
proptest = { workspace = true }

[features]
default = ["mock"]
mock = []
production = []