[package]
name = "ephemeral-ml-common"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[features]
default = []