[package]
name = "ephemeral-ml-common"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }

# Cryptographic dependencies
hpke = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }

# CBOR serialization
serde_cbor = { workspace = true }

# Serde bytes for efficient byte array serialization
serde_bytes = "0.11"
byteorder = "1.5.0"

[dev-dependencies]
proptest = { workspace = true }

[features]
default = []
