[package]
name = "ephemeral-ml-host"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# Workspace dependencies
ephemeral-ml-common = { path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
serde_cbor = { workspace = true }
hpke = { workspace = true, features = ["std", "x25519"] }

# Host-specific dependencies
tokio-vsock = { workspace = true, optional = true }
libc = "0.2"
aws-config = "1.8.12"
aws-sdk-kms = "1.97.0"
aws-types = "1.3.11"
base64 = "0.22.1"

# Observability (v1)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }

[dev-dependencies]
proptest = { workspace = true }

[features]
default = ["mock"]
mock = []
production = ["tokio-vsock"]
