[package]
name = "vsock-pingpong"
version = "0.1.0"
edition = "2021"

# Keep deps minimal: use libc only for AF_VSOCK syscalls.
[dependencies]
libc = "0.2"
aws-nitro-enclaves-nsm-api = "0.4.0"
hex = "0.4"
serde_bytes = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
# RSA keypair for KMS RecipientInfo flow (RSAES_OAEP_SHA_256)
rsa = { version = "0.9", features = ["std"] }
ephemeral-ml-common = { path = "../../common" }

[profile.release]
# small binary; enclave images benefit from size.
strip = true
lto = true
codegen-units = 1
# Keep the enclave process alive long enough to inspect logs if something panics.
# We'll catch unwinds in main and then sleep forever.
panic = "unwind"
